--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "author": "Serena Hacker <sehacker@uwaterloo.ca>",
     "license": "MIT",
     "dependencies": {
+        "gulp-install": "^1.1.0",
         "gulp-update": "0.0.2",
         "jquery": "^3.3.1"
     },
     "devDependencies": {
         "bower": "^1.8.4",
         "css-reset-and-normalize": "^1.0.1",
-        "gulp": "^4.0.0",
+        "gulp": "^4.0.2",
         "igem-wikibrick": "^0.7.10",
         "string-format": "^2.0.0"
     },
